# macemailapp

./: .bumpversion.cfg  CLAUDE.md  README.md  pyproject.toml
HomebrewFormula/: macmailapp.rb
macemailapp/: __init__.py  __main__.py  logging.py  macemailapp.spec  macemailapp_applescript.py  mailapp.py  script_loader.py
macemailapp/cli/: cli.py  cli_help.py
macemailapp/cli/commands/: accounts.py  draft.py  list_messages.py  mailboxes.py  mark.py  move.py  send.py  show.py
macmailapp/: __init__.py  __main__.py  build.sh  logging.py  macmailapp.applescript  macmailapp_applescript.py  mailapp.py  script_loader.py  utils.py
macmailapp/cli/: cli.py
macmailapp/cli/commands/: accounts.py  draft.py  list_messages.py  mailboxes.py  mark.py  move.py  send.py  show.py
plans/: 2026-05-24-macmailapp-all-phases.md
skills/apple-email/: SKILL.md
tests/: conftest.py  test_applescript_read.py  test_applescript_write.py  test_cli_read.py  test_cli_write.py  test_mailapp_read.py  test_mailapp_write.py  test_send_safety.py  test_utils.py
tmp/: CLAUDE.md  README.md  SKILL.md
